# DiracImplementation

./: .gitignore  .gitmodules  README.md  appendix.tex  li.tex  lstcoq.sty  lstlisting.tex  main.tex  notations.tex  ref.bib  yingte.tex
CiME2/: cime2  dirac.cim2  redundancy_test.py
CoqImp/: dirac.v
CoqQ/: README.md  coq-mathcomp-quantum.opam
CoqQ/src/: autonat.v  cpo.v  ctopology.v  dirac_notation.v  extnum.v  hermitian.v  hspace.v  inhabited.v  mcaextra.v  mcextra.v  mxpred.v  notation.v  note.txt  orthomodular.v  qreg.v  qtype.v  quantum.v  summable.v  tensor.v
CoqQ/src/dirac/: dirac.v  hstensor.v  setdec.v
CoqQ/src/example/coqq_paper/: example.v  qhl.v  qwhile.v
Mathematica/: Confluence.wl  CoreTerminationCheck.nb  DEMO.nb  DiracAll.wl  DiracCore.wl  DiracDeltaExt.wl  DiracProjExt.wl  DiracProjSumExt.wl  DiracSumExt.wl  DiracTpExt.wl  DiracTyping.wl  DiracUserLanguage.wl  ExampleList.nb  HHL.nb  README.md  TermOrderCheck.wl  Tutorial.nb  Typing.wl  Unification.wl  eval.nb  test.nb  test_internal.nb  testing.nb
dirac_coq/: README.md  dune-project
example-list/: coqq-example.txt  examples.tex  wishlist.txt
materials/: dirac-by-mma.nb
proof-script/: basis.mstrs  basis.trs  confluence.mstrs  confluence.trs  scalar.mstrs  scalar.trs  translate.sh
termination/: BASIS.tes  BRA-ADD.tes  BRA-ADJ.tes  BRA-MLT.tes  BRA-SCR.tes  COMPLEX.tes  DELTA.tes  KET-ADD.tes  KET-ADJ.tes  KET-MLT.tes  KET-SCR.tes  KET-TSR.tes  OPT-ADD.tes  OPT-ADJ.tes  OPT-MLT.tes  OPT-OUTER.tes  OPT-SCR.tes  OPT-TSR.tes  SCR-ADD.tes  SCR-CONJ.tes  SCR-DOT.tes  SCR-MLT.tes  TYPING.tes  (+13 more)
(+1173 files in other folders)
